<resources>

    <!--DEBUG_KEYS-->
    <!--<string name="isDeveloping">true</string>-->
    <!--<string name="wxapp_id">e1cb249bad938f6c739fff459a721d59</string>-->


    <!--RELEASE_KEYS-->
    <string name="isDeveloping">false</string>
    <string name="wxapp_id">194f40a28641ff880d54f2c20687f3b8</string>


    <string name="app_name">煎蛋</string>
    <string name="img_cahce">Jandan/cache</string>

    <string name="picture_saved">图片已保存</string>
    <string name="picture_save_failed">图片保存失败</string>
    <string name="loading">正在加载</string>
    <string name="click_to_load_more">点击加载</string>
    <string name="no_more">没有更多</string>
    <string name="setting">设置</string>
    <string name="video">小电影</string>
    <string name="joke">段子</string>
    <string name="girl_pic">妹子图</string>
    <string name="fun_pic">无聊图</string>
    <string name="news">新鲜事</string>
    <string name="test_html"><![CDATA[\"<p>目前，超过三分之二的美国成年人都面临着超重和肥胖的困扰，然而导致这一问题的罪魁祸首就是位于配料表顶部的糖。</p> <p>法国科学家近日在无意间发现一种方法，可以让人们在享受美味甜食的同时也不必为体重问题而担忧。</p> <p>研究团队使用新的设备对事物的气味化合物进行了扫描，并且分离出了天然芳香分子，并将其加入低脂、少糖和少盐的食物中，这样可以欺骗人们的大脑，让脑子相信嘴巴吃进去的食物油脂丰富，而且口味略重。</p> <p><img src=\"http://tankr.net/s/small/9S46.jpg\" alt=\"大脑欺骗术：让你安心享用「甜食」\" /></p> <p>科学家表示，大多数消费者其实知道他们应该摄入低脂且口味清淡的健康食品。但问题是这些看起来不健康的调料却让食物变得非常美味。我们相信，通过香味可以弥补这些健康食品在味觉上的不足，让它们对消费者具有更大的吸引力。</p> <p>香味在食物中扮演着至关重要的角色，这也能够解释食品科学家为什么会致力于研制化学香料、香精以及植物提取物来增加食品的风味。</p> <p>但最近由于美国居高不下的肥胖率，这帮科学家们已经将工作重心转移到如何提高低脂、清淡食物的味道上来了。</p> <p>试问这位客官，假如你买的食物少加了30%的盐，而且它又很难吃，你会怎么做？当然是喂自己袋盐啊！你看，这就失去了一开始减少食物中用盐的意义。</p> <p>科学家表示，我们的目标是优化再生产的过程，所以食品工业可以生产出更多健康产品。消费者会真正意义上的喜爱上这种食品，并且长期选择它们。</p> <p>在之前的工作中，科学家主要探索如何通过香味来弥补食物中缺失的脂肪、糖和盐所造成的口感。</p> <p>2009年，研究人员要求参加实验的志愿者们品尝一种馅饼，但在馅饼上有一层具有火腿和盐香气的奶油冻。</p> <p>研究结果表明，参与者们普遍认为火腿香味让人们觉得该馅饼添加了大量的盐，但实际上并没有。</p> <p><img src=\"http://tankr.net/s/small/6S51.jpg\" alt=\"大脑欺骗术：让你安心享用「甜食」\" /></p> <p>有一些参与实验的人员表示，火腿气味在奶油冻中产生的不同变化以及盐分的分布不均，让这块馅饼尝起来就像足足多添加了40%的盐。</p> <p>最近的研究中，科学家们找到了一种新的方法来分离具有甜味的香味分子。这个方法被称为 Gas Chromatograph-Olfactometry Associated Taste (GC-OAT)，这种方法主要是通过结合一个被称为olfactoscan的装置将连续不断地香味输送到鼻腔中。</p> <p>新的测试中，供试人员被要求通过使用olfactoscan闻水果的香味，同时，研究者们使用GC-OAT法从果汁中分离香味分子。</p> <p>之后这些气味分子会被添加到olfactoscan管道中供参与实验的人员闻，研究人员会询问他们这是否会有助于他们感受果汁的甜度。</p> <p>最终，科学家们认为该研究的初步结果表明，这种新的技术能够帮助食品产业在不牺牲食物味道和气味的条件下制造更多的健康食品。</p> <p><em>[<a target=_blank href=\"http://i.jandan.net/2016/08/23/fool-brain-thinking.html\">千里之外</a> via <a target=_blank rel=\"external\" href=\"http://www.dailymail.co.uk/sciencetech/article-3753776/The-SMELL-revolutionise-dieting-Chemicals-fool-brain-thinking-healthy-snacks-loaded-sugar.html\">dailymail</a>]</em></p> <div class=\"share-links\"> <a target=_blank href=\"http://service.weibo.com/share/share.php?appkey=43259970&searchPic=true&url=http%3A%2F%2Fi.jandan.net%2F2016%2F08%2F23%2Ffool-brain-thinking.html&title=%E3%80%90%E5%A4%A7%E8%84%91%E6%AC%BA%E9%AA%97%E6%9C%AF%EF%BC%9A%E8%AE%A9%E4%BD%A0%E5%AE%89%E5%BF%83%E4%BA%AB%E7%94%A8%E3%80%8C%E7%94%9C%E9%A3%9F%E3%80%8D%E3%80%91%E6%B3%95%E5%9B%BD%E7%A7%91%E5%AD%A6%E5%AE%B6%E8%BF%91%E6%97%A5%E5%9C%A8%E6%97%A0%E6%84%8F%E9%97%B4%E5%8F%91%E7%8E%B0%E4%B8%80%E7%A7%8D%E6%96%B9%E6%B3%95%EF%BC%8C%E5%8F%AF%E4%BB%A5%E8%AE%A9%E4%BA%BA%E4%BB%AC%E5%9C%A8%E4%BA%AB%E5%8F%97%E7%BE%8E%E5%91%B3%E7%94%9C%E9%A3%9F%E7%9A%84%E5%90%8C%E6%97%B6%E4%B9%9F%E4%B8%8D%E5%BF%85%E4%B8%BA%E4%BD%93%E9%87%8D%E9%97%AE%E9%A2%98%E8%80%8C%E6%8B%85%E5%BF%A7%E3%80%82%40%E7%85%8E%E8%9B%8B%E7%BD%91&pic=http%3A%2F%2Fi.jandan.net%2Fshare%2F2016%2F08%2Fp-81802.gif&style=number&language=zh_cn&button=pubilish\" class=\"share-link share-link-weibo\" target=\"_blank\">分享到微博</a> <a href=\"javascript:;\" class=\"share-link share-link-weixin\"><img src=\"http://i.jandan.net/share/2016/08/qr-81802.png\">分享到微信</a> </div> <script> $(\'.share-link-weixin\').click(function(){ $(this).find(\'img\').toggle(); }); </script> \"]]></string>
    <string name="spit">吐槽</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hot_comment">热评</string>
    <string name="spit_fuck">吐槽</string>


</resources>
