<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/grey_jd"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/max_margin"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/max_margin"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="@dimen/mm_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fun_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/max_margin"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/max_margin"
            android:text="@string/fun_pic"
            android:textColor="@color/white"
            android:textSize="@dimen/mm_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_girl_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/max_margin"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/max_margin"
            android:text="@string/girl_pic"
            android:textColor="@color/white"
            android:textSize="@dimen/mm_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_joke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/max_margin"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/max_margin"
            android:text="@string/joke"
            android:textColor="@color/white"
            android:textSize="@dimen/mm_text_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/max_margin"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/max_margin"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textSize="@dimen/mm_text_size" />


    </LinearLayout>

    <View
        android:layout_width="160dp"
        android:layout_height="1px"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_white" />

    <LinearLayout
        android:id="@+id/ll_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/max_margin"
            android:background="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/max_margin"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/mm_text_size" />


    </LinearLayout>

</LinearLayout>